// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails if new is null but old is not 1`] = `
Object {
  "actual": "null",
  "count": 1,
  "diff": "- Expected
+ Received

- <div />
+ null",
  "expected": "<div />",
  "key": "new-is-null 1",
  "pass": false,
}
`;

exports[`fails if old was null but new is not 1`] = `
Object {
  "actual": "<div />",
  "count": 1,
  "diff": "- Expected
+ Received

- null
+ <div />",
  "expected": "null",
  "key": "old-was-null 1",
  "pass": false,
}
`;

exports[`fails if the type changes 1`] = `
Object {
  "actual": "<span>
  <span />
</span>",
  "count": 1,
  "diff": "- Expected
+ Received


- <div>
+ <span>
    <span />
- </div>
+ </span>",
  "expected": "<div>
  <span />
</div>",
  "key": "name 1",
  "pass": false,
}
`;

exports[`passes if new and old are null 1`] = `
Object {
  "actual": "",
  "count": 1,
  "expected": "",
  "key": "both-null 1",
  "pass": true,
}
`;
